--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "jest": "^29.2.2",
+    "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
 }
