--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --passWithNoTests --maxWorkers=50%"
   },
   "dependencies": {
     "next": "13.0.0",
@@ -14,16 +15,20 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.19.0",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "babel-jest": "^29.2.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
