--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "test": "jest --passWithNoTests --maxWorkers=50%"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.2.1",
-    "@mdx-js/react": "^2.2.1",
-    "@next/mdx": "^13.1.1",
-    "next": "13.0.0",
+    "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
@@ -28,6 +26,7 @@
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.2.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
@@ -35,5 +34,8 @@
     "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
