--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.0",
+    "@types/jest": "29.4.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/styled-components": "^5.1.26",
-    "babel-jest": "^29.2.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "jest": "^29.2.2",
+    "jest": "29.4.1",
     "jest-environment-jsdom": "^29.2.2",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
